Ajuste no nome do curso; chave de fontes

--- a/jekyll/_config.yml
+++ b/jekyll/_config.yml
@@ -35,11 +35,12 @@ github_username: "computacaoraiz"
 ## Configurações para o tema:
 ##
 cs50:
-  title: CR6.100B - Introdução à Ciência da Computação
+  title: CR6.100B
   locale: pt-BR
   tz: America/Sao_Paulo
   description: Disciplina de introdução à Ciência da Computação, para estudantes brasileiros, adaptada da Harvard CS50x.
   alert: warning dismissible
+  fontawesome: 082b54de62
 
 
 ##
